--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "test": "jest",
+    "coverage": "jest --coverage",
     "clean": "rm -rf dist node_modules",
     "build-ts": "rm -rf dist && tsc --noEmitOnError",
     "build": "npm run build-ts",
@@ -35,6 +37,9 @@
   },
   "homepage": "https://github.com/DavidArayan/bvx.ts#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.4",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.2",
     "watch": "^1.0.2"
   }
