- Removed CompactArray - Reasons for removal are a few fold. 1) its falling into over-engineering trap especially for TS and 2) it has flaws i can't be bothered fixing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:ci": "jest --ci --runInBand --coverage",
     "test": "jest",
     "coverage": "jest --coverage",
-    "clean": "rm -rf dist node_modules coverage",
+    "clean": "rm -rf dist node_modules coverage package-lock.json",
     "build-ts": "rm -rf dist && tsc --noEmitOnError",
     "build": "npm run build-ts",
     "watch": "watch 'npm run build' ./src"
