--- a/package.json
+++ b/package.json
@@ -18,28 +18,19 @@
     "url": "git+https://github.com/DavidArayan/bvx.ts.git"
   },
   "keywords": [
-    "webgl",
-    "renderer",
-    "rendering",
-    "3d",
-    "graphics",
     "voxels",
     "voxel",
-    "bitvoxel",
-    "mesh",
-    "geometry",
-    "scenegraph",
-    "ecs"
+    "bitvoxel"
   ],
-  "author": "David Arayan",
+  "author": "OvisTek",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DavidArayan/bvx.ts/issues"
+    "url": "https://github.com/OvisTek/bvx.ts/issues"
   },
-  "homepage": "https://github.com/DavidArayan/bvx.ts#readme",
+  "homepage": "https://github.com/OvisTek/bvx.ts",
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "jest": "^27.0.4",
+    "jest": "^27.0.5",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4",
     "watch": "^1.0.2"
