- Renamed main.yml to jest.yml for consistency - added publish.yml to git workflows to publish to NPM - Added .npmignore for npm publish - Fixed up package.json a little - Changed implementation of HashGrid to store the hash key as a number rather than an object - Fixed small issues with VoxelFaceGeometry for consistency - Added VoxelGeometry.popCount() - Added VoxelChunk.cmp() and changes generic Key interface to MortonKey type - Changed VoxelWorld.insert() signature to just accept a VoxelChunk as VoxelChunk also contains the insert key - Added tests for VoxelWorld, VoxelChunk and VoxelFaceGeometry, brining unit test coverage to 100%

--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -4,13 +4,13 @@ jobs:
   bump:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repository code
+    - name: check out repository code
       uses: actions/checkout@v2
-    - name: NPM Install
+    - name: npm install
       run: npm install
-    - name: Tests
+    - name: tests
       run: npm run test:ci
-    - name: Generating coverage badges
+    - name: generating coverage badges
       uses: jpb06/jest-badges-action@v1.3.1
       with:
         branches: master,main
