--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bvx.ts",
+  "name": "@ovistek/bvx.ts",
   "version": "1.0.0",
-  "description": "Generic BitVoxel Engine Implementation in TypeScript",
+  "description": "Generic & Renderer Agnostic BitVoxel Engine Implementation in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -11,11 +11,12 @@
     "clean": "rm -rf dist node_modules coverage package-lock.json",
     "build-ts": "rm -rf dist && tsc --noEmitOnError",
     "build": "npm run build-ts",
-    "watch": "watch 'npm run build' ./src"
+    "watch": "watch 'npm run build' ./src",
+    "clean:build": "npm run clean && npm install && npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DavidArayan/bvx.ts.git"
+    "url": "git+https://github.com/OvisTek/bvx.ts.git"
   },
   "keywords": [
     "voxels",
@@ -30,9 +31,9 @@
   "homepage": "https://github.com/OvisTek/bvx.ts",
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "jest": "^27.0.5",
+    "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4",
+    "typescript": "^4.3.5",
     "watch": "^1.0.2"
   }
 }
