--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,6 @@
 name: NPM Publish
 on: 
   push:
-    branches:
-      - main
     tags:
       - v*.*.*
 jobs:
@@ -12,12 +10,13 @@ jobs:
       - uses: actions/checkout@v1
       - name: set tag version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo ${{ env.RELEASE_VERSION }}
       - uses: actions/setup-node@v1
         with:
           node-version: 16
       - run: npm run clean:build
       - uses: JS-DevTools/npm-publish@v1
         with:
-          token: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          token: ${{ secrets.NPM_PUBLISH_KEY }}
           tag: ${{ env.RELEASE_VERSION }}
           access: 'public'
