--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: set tag version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: print version number
         run: echo ${{ env.RELEASE_VERSION }}
       - uses: actions/setup-node@v1
         with:
