--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,17 +7,17 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: set tag version
+      - uses: actions/checkout@v1
+      - name: set version from tag
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: print version number
         run: echo ${{ env.RELEASE_VERSION }}
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: 16
-      - run: npm run clean:build
       - name: set pre-release version
         run: npm version ${{ env.RELEASE_VERSION }}
+      - run: npm run clean:build
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_PUBLISH_KEY }}
