--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,14 +7,18 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: set version from tag
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: print version number
         run: echo ${{ env.RELEASE_VERSION }}
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: 16
+      - name: configure git
+        run: |
+          git config user.email "david.arayan12@gmail.com"
+          git config user.name "OvisTek"
       - name: set pre-release version
         run: npm version ${{ env.RELEASE_VERSION }}
       - run: npm run clean:build
