--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,11 @@
 node_modules/
 tsconfig.json
 package-lock.json
+typedoc.json
 jest.config.ts
-jest.config.js
 tests/
 src/
+docs/
 coverage/
 .github/
 .DS_Store
