--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generic & Renderer Agnostic BitVoxel Engine Implementation in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "scripts": {
     "test:ci": "jest --ci --runInBand --coverage",
     "test": "jest",
@@ -12,7 +13,8 @@
     "build-ts": "rm -rf dist && tsc --noEmitOnError",
     "build": "npm run build-ts",
     "watch": "watch 'npm run build' ./src",
-    "clean:build": "npm run clean && npm install && npm run build"
+    "clean:build": "npm run clean && npm install && npm run build",
+    "doc": "rm -rf docs && npx typedoc && cp -R graphics/ docs/graphics/ && cp -R badges/ docs/badges/"
   },
   "repository": {
     "type": "git",
@@ -33,7 +35,8 @@
     "@types/jest": "^26.0.24",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
+    "ts-node": "^10.2.0",
+    "typedoc": "^0.21.5",
     "typescript": "^4.3.5",
     "watch": "^1.0.2"
   }
