--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,10 @@
 name: NPM Publish
 on: 
-  push:
-    tags:
-      - '*.*.*'
+  workflow_run:
+    workflows: ['Auto Tag and Release']
+    types: [completed]
+    branches:
+      - 'main'
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -11,8 +13,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Get latest tag
+        id: latest_tag
+        run: |
+          git fetch --tags
+          latest_tag=$(git tag --sort=-v:refname | head -n 1)
+          if [ -z "$latest_tag" ]; then
+              latest_tag="1.0.0"
+          fi
+          echo "::set-output name=tag::$latest_tag"
       - name: set version from tag
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${{ steps.latest_tag.outputs.tag }}" >> $GITHUB_ENV
       - name: print version number
         run: echo ${{ env.RELEASE_VERSION }}
       - uses: actions/setup-node@v4
