--- a/bvx-kit/package.json
+++ b/bvx-kit/package.json
@@ -37,6 +37,9 @@
   "homepage": "https://github.com/astrum-forge/bvx-kit",
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "eslint": "^9.11.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
