--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -7,11 +7,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - uses: szenius/set-timezone@v2.0
-        with:
-          timezoneLinux: "Asia/Singapore"
-          timezoneMacos: "Asia/Singapore"
-          timezoneWindows: "Singapore Standard Time"
       - name: Setup Node.js v20
         uses: actions/setup-node@v4
         with:
@@ -20,3 +15,5 @@ jobs:
         run: npm --prefix ./bvx-kit install ./bvx-kit
       - name: Run Jest tests in CI mode
         run: npm --prefix ./bvx-kit run test:ci
+      - name: Run ESLint
+        run: npm --prefix ./bvx-kit run lint
